# wot-personal-coach

./: .gitignore  .gitmodules  README.md
.agent/: GEMINI.md
replays-parser/: .gitignore  Cargo.toml  DESIGN.md  REPLAY_FORMAT.md  build.rs  generate_ids.py  ids.json  joined_entities.xml  manual_packet_defs.json  message_map.txt  stats.txt
replays-parser/message_codes/wot_eu/: _default.json
replays-parser/ref/wotreplay-parser/ext/cmake_modules/: FindTBB.cmake
replays-parser/ref/wotreplay-parser/src/: wotstats.1
replays-parser/replays-data/wot_eu/1.32.0/: 17418765431846_france_F109_AMD_Panhard_178B_campania_big.wotreplay  17559755953978_ussr_R155_Object_277_japort.wotreplay  17559808024697_poland_Pl15_60TP_Lewandowskiego_lakeville.wotreplay
replays-parser/replays-data/wot_ru/unknown/: 20260207_1352_germany-G114_Rheinmetall_Skorpian_500_stalingrad.mtreplay  20260207_1404_usa-A150_MBT_B_44_north_america.mtreplay  replay_last_battle_20260207113923.mtreplay
replays-parser/src/: definitions.rs  encryption.rs  lib.rs  main.rs  packet_stream.rs  parser.rs  types.rs
replays-parser/tests/: integration_tests.rs
