[package]
name = "replays-parser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.101"
blowfish = "0.9.1"
byteorder = "1.5.0"
clap = { version = "4.5.57", features = ["derive"] }
encoding_rs = "0.8.35"
flate2 = "1.1.9"
hex = "0.4.3"
memmap2 = "0.9.9"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"

[build-dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0"
walkdir = "2.5"
